Fix responsive break at Menu component

--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -31,6 +31,7 @@
   justify-content: space-between;
   height: 100%;
   left: 0;
+  max-width: 300px;
   padding: 24px;
   position: fixed;
   top: 0;
